--- a/index.html
+++ b/index.html
@@ -3,12 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
     <script src="./script.js" defer></script>
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Weather App</h1>
+    <h1 class="my-3">Weather App</h1>
+
+    <div class="form-check form-switch switch">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        value=""
+        id="checkChecked"
+        checked
+      />
+      <label class="form-check-label" for="checkChecked">
+        Theme Dark / Light
+      </label>
+    </div>
+
     <div class="city">
       <label for="cityValueInput">City Name:</label>
       <input type="text" id="cityValueInput" placeholder="Enter city name..." />
