added .gitignore + last search

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
+    <script src="./env.js"></script>
     <script src="./script.js" defer></script>
     <title>Weather App</title>
   </head>
@@ -37,6 +38,7 @@
     <div class="city">
       <label for="cityValueInput">City Name:</label>
       <input type="text" id="cityValueInput" placeholder="Enter city name..." />
+      <div id="lastCitiesDiv"></div>
       <label for="langSelect">Language</label>
       <select id="langSelect">
         <option value="ru">Русский</option>
